JEKT-1905: hmd pipeline created and tested ❇️ New     - Pipeline        - SAP_01_md_matl_dstn_chn_bwi
🔁 Modified
    - Pipeline
       - SAP_01_md_matl_dstn_chn_hmd
    - Dataset
       - MD_MATL_DSTN_CHN

--- a/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
@@ -444,7 +444,7 @@ schema:
       mappings: []
       tags: []
   - name: MATL_SLS_CAT_GRP_DESC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
