--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2128,14 +2128,33 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd:
-    name: SAP_01_md_matl_dstn_chn_bwi_hmd
+    name: SAP_01_md_matl_dstn_chn_hmd
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-18 10:22:57'
-    modifiedAt: '2023-05-18 10:22:57'
+    modifiedAt: '2023-05-18 11:11:21'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MVKE
+      - datasets/DS_SAP_02_T179
+      - datasets/DS_SAP_03_t179t
+      - datasets/DS_SAP_04_tvms
+      outputs:
+      - datasets/MD_MATL_DSTN_CHN
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_01_md_matl_dstn_chn_bwi:
+    name: SAP_01_md_matl_dstn_chn_bwi
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 10:57:53'
+    modifiedAt: '2023-05-18 10:58:16'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
@@ -3338,7 +3357,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 10:46:24'
+    modifiedAt: '2023-05-18 11:11:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
