--- a/src/pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd/pbt_aspects.yml
@@ -1,19 +1,5 @@
 version: 1
 configurations:
-- svs
-- hm2_nw_pp_3
-- p01
-- bbl
-- mbp
-- bwi_nw_pp
-- bba
-- tai
-- mrs
-- hcs
 - default
-- atl
-- bbn
-- geu
-- fsn
-- hmd_nw_pp_2
+- hmd
 dependencies: []
