JEKT-1905: bwi pipeline created and tested, SAP job schedules created ❇️ New     - Job        - JOB_md_matl_dstn_chn_hm2        - JOB_md_matl_dstn_chn
🔁 Modified
    - Pipeline
       - SAP_01_md_matl_dstn_chn_hmd
       - SAP_01_md_matl_dstn_chn_bba_bbl_bbn_geu_hcs_mbp_mrs_p01_tai_svs_atl_fsn
       - SAP_01_md_matl_dstn_chn_bwi
    - Dataset
       - MD_MATL_DSTN_CHN

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,7 +2094,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-18 10:34:23'
+    modifiedAt: '2023-05-18 12:03:10'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
@@ -2135,7 +2135,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-18 10:22:57'
-    modifiedAt: '2023-05-18 11:11:21'
+    modifiedAt: '2023-05-18 11:24:23'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
@@ -2154,14 +2154,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-18 10:57:53'
-    modifiedAt: '2023-05-18 10:58:16'
+    modifiedAt: '2023-05-18 11:36:55'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
-      - datasets/DS_SAP_02_T179
       - datasets/DS_SAP_03_t179t
-      - datasets/DS_SAP_03_tvmst
-      - datasets/DS_SAP_04_tvms
       outputs:
       - datasets/MD_MATL_DSTN_CHN
     subgraphs: []
@@ -3357,7 +3354,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 11:11:10'
+    modifiedAt: '2023-05-18 11:31:55'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8849,6 +8846,58 @@ jobs:
     createdAt: '2023-05-05 14:18:48'
     modifiedAt: '2023-05-05 14:19:14'
     author: natkins7@its.jnj.com
+  jobs/JOB_md_matl_dstn_chn:
+    name: JOB_md_matl_dstn_chn
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_md_matl_dstn_chn
+    - pipelines/SAP_01_md_matl_dstn_chn_bwi
+    - pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-18 11:45:18'
+    modifiedAt: '2023-05-18 12:01:01'
+    author: jcacere7@its.jnj.com
+  jobs/JOB_md_matl_dstn_chn_hm2:
+    name: JOB_md_matl_dstn_chn_hm2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd_hm2
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-18 12:01:30'
+    modifiedAt: '2023-05-18 12:02:02'
+    author: jcacere7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
