JEKT-1887 ❇️ New     - Pipeline        - SAP_01_MD_MATL_LOC_HMD     - Dataset        - DS_SAP_02_T024F        - DS_SAP_02_NSDM_V_MARC
🔁 Modified
    - Dataset
       - MD_MATL_LOC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2141,6 +2141,26 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_MATL_LOC_HMD:
+    name: SAP_01_MD_MATL_LOC_HMD
+    description: Pipeline to bba bbl bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 05:08:02'
+    modifiedAt: '2023-05-18 12:51:18'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_02_NSDM_V_MARC
+      - datasets/DS_SAP_02_T024
+      - datasets/DS_SAP_02_T024D
+      - datasets/DS_SAP_02_T024F
+      - datasets/DS_SAP_02_T141T
+      outputs:
+      - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3392,7 +3412,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 04:09:59'
+    modifiedAt: '2023-05-18 12:51:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7137,6 +7157,36 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-17 11:57:53'
         modifiedAt: '2023-05-17 11:57:53'
+  datasets/DS_SAP_02_T024F:
+    name: DS_SAP_02_T024F
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-18 05:28:40'
+    modifiedAt: '2023-05-18 05:28:40'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-18 05:28:40'
+        modifiedAt: '2023-05-18 05:28:40'
+  datasets/DS_SAP_02_NSDM_V_MARC:
+    name: DS_SAP_02_NSDM_V_MARC
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-18 12:03:20'
+    modifiedAt: '2023-05-18 12:03:21'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-18 12:03:20'
+        modifiedAt: '2023-05-18 12:03:20'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
