JEKT-1896 Updated job for JET to new JET Pipeline 🔁 Modified     - Job        - JOB_MD_MATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8688,6 +8688,7 @@ jobs:
     pipelines:
     - pipelines/SAP_MD_MATL_MBP
     - pipelines/MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI
+    - pipelines/JDE_MD_MATL_JET
     - pipelines/SAP_MD_MATL_BBL
     - pipelines/SAP_MD_MATL_HCS
     - pipelines/JDE_BW2_MD_MATL
@@ -8701,7 +8702,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-12 21:12:41'
+    modifiedAt: '2023-05-18 14:48:19'
     author: natkins7@its.jnj.com
   jobs/MD_MATL_HM2_JOB:
     name: JOB_MD_MATL_HM2
