JEKT-1887 ❇️ New     - Pipeline        - JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_LOC_DEU
    - Dataset
       - MD_MATL_LOC
       - DS_JDE_4102

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -995,7 +995,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-24 14:30:57'
-    modifiedAt: '2023-05-07 01:58:46'
+    modifiedAt: '2023-05-18 14:46:30'
     datasets:
       inputs:
       - datasets/DS_JDE_4102
@@ -2157,6 +2157,22 @@ pipelines:
       - datasets/DS_SAP_02_T024D
       - datasets/DS_SAP_02_T024F
       - datasets/DS_SAP_02_T141T
+      outputs:
+      - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD:
+    name: JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD
+    description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 14:50:56'
+    modifiedAt: '2023-05-18 14:56:47'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_4102
       outputs:
       - datasets/MD_MATL_LOC
     subgraphs: []
@@ -3412,7 +3428,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 12:51:18'
+    modifiedAt: '2023-05-18 14:53:36'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5842,7 +5858,7 @@ datasets:
     description: ''
     author: ggrilo1@its.jnj.com
     createdAt: '2023-03-24 13:52:45'
-    modifiedAt: '2023-03-31 08:58:23'
+    modifiedAt: '2023-05-18 14:54:49'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
