--- a/src/datasets/DS_F0005_ADT/pbt_aspects.yml
+++ b/src/datasets/DS_F0005_ADT/pbt_aspects.yml
@@ -100,6 +100,48 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: DRCFRGUID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DRCFRMKEY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DRCFRPID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DRCFRUSER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DRISDELETE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DRCFRSEQN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
