--- a/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_DSTN_CHN/pbt_aspects.yml
@@ -18,14 +18,14 @@ schema:
       tags: []
   - name: SL_ORG_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DSTR_CHNL_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -73,14 +73,14 @@ schema:
       mappings: []
       tags: []
   - name: ENTRP_DSTN_CHN_STS_CD
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_BASE_CD
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -444,7 +444,7 @@ schema:
       mappings: []
       tags: []
   - name: MATL_SLS_CAT_GRP_DESC
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
