--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2094,7 +2094,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-16 09:44:01'
-    modifiedAt: '2023-05-18 12:03:10'
+    modifiedAt: '2023-05-18 16:53:51'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MVKE
@@ -2159,6 +2159,22 @@ pipelines:
       inputs:
       - datasets/DS_SAP_01_MVKE
       - datasets/DS_SAP_03_t179t
+      outputs:
+      - datasets/MD_MATL_DSTN_CHN
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_01_md_matl_dstn_chn:
+    name: JDE_01_md_matl_dstn_chn_deu_djd_sjd_bw2_gmd_jes_jet_jsw
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-18 15:26:27'
+    modifiedAt: '2023-05-18 16:45:47'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_f4101
       outputs:
       - datasets/MD_MATL_DSTN_CHN
     subgraphs: []
@@ -3354,7 +3370,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 11:31:55'
+    modifiedAt: '2023-05-18 15:56:04'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7189,6 +7205,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-05-18 10:39:36'
         modifiedAt: '2023-05-18 10:39:36'
+  datasets/DS_JDE_01_f4101:
+    name: DS_JDE_01_f4101
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-05-18 15:29:15'
+    modifiedAt: '2023-05-18 15:34:59'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-05-18 15:29:15'
+        modifiedAt: '2023-05-18 15:29:15'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
@@ -8862,6 +8893,7 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/JDE_01_md_matl_dstn_chn
     - pipelines/SAP_01_md_matl_dstn_chn
     - pipelines/SAP_01_md_matl_dstn_chn_bwi
     - pipelines/SAP_01_md_matl_dstn_chn_bwi_hmd
@@ -8871,7 +8903,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-18 11:45:18'
-    modifiedAt: '2023-05-18 12:01:01'
+    modifiedAt: '2023-05-18 16:52:23'
     author: jcacere7@its.jnj.com
   jobs/JOB_md_matl_dstn_chn_hm2:
     name: JOB_md_matl_dstn_chn_hm2
