--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2009,11 +2009,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-28 09:03:25'
-    modifiedAt: '2023-05-18 15:06:39'
+    modifiedAt: '2023-05-18 17:11:15'
     datasets:
       inputs:
       - datasets/DS_SAP_01_CAWNT
-      - datasets/DS_SAP_01_T006A
       - datasets/DS_SAP_01_T023T
       - datasets/DS_SAP_01_TSPAT
       - datasets/DS_SAP_AUSP_01
@@ -2021,6 +2020,7 @@ pipelines:
       - datasets/DS_SAP_INOB_01
       - datasets/DS_SAP_MAKT_01
       - datasets/DS_SAP_MARA_HM2
+      - datasets/DS_SAP_T006A_NC
       - datasets/DS_SAP_T134T_BBA_BBL_BBN
       outputs:
       - datasets/MD_MATL
@@ -3251,7 +3251,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-18 04:41:04'
+    modifiedAt: '2023-05-18 17:02:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -5381,7 +5381,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-03-20 12:13:46'
-    modifiedAt: '2023-04-13 15:09:44'
+    modifiedAt: '2023-05-18 17:02:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6791,7 +6791,7 @@ datasets:
     description: ''
     author: ypatel8@its.jnj.com
     createdAt: '2023-04-28 20:45:33'
-    modifiedAt: '2023-04-28 20:45:33'
+    modifiedAt: '2023-05-18 17:02:10'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -7071,6 +7071,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-17 16:24:21'
         modifiedAt: '2023-05-17 16:24:21'
+  datasets/DS_SAP_T006A_NC:
+    name: DS_SAP_T006A_NC
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-18 17:09:41'
+    modifiedAt: '2023-05-18 17:09:41'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-18 17:09:41'
+        modifiedAt: '2023-05-18 17:09:41'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
@@ -8702,7 +8717,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-18 14:48:19'
+    modifiedAt: '2023-05-18 17:15:48'
     author: natkins7@its.jnj.com
   jobs/MD_MATL_HM2_JOB:
     name: JOB_MD_MATL_HM2
