JEKT-1887 🔁 Modified     - Pipeline        - JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD     - Dataset        - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -86,6 +86,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: SPL_PRCMT_TYPE_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PRCMT_TYPE_CD
     type: string
     nullable: true
@@ -156,6 +163,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PLAN_DELV_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: INHS_PRDTN_DAYS_CNT
     type: decimal(18,4)
     nullable: true
@@ -164,6 +178,13 @@ schema:
       mappings: []
       tags: []
   - name: PRCHSNG_GRP_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VMI_IND
     type: string
     nullable: true
     metadata:
@@ -198,6 +219,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: FLLP_MATL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: TOT_REPLN_LT
     type: decimal(18,4)
     nullable: true
@@ -213,6 +241,27 @@ schema:
       mappings: []
       tags: []
   - name: MRP_GRP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNTL_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MM_DFLT_SUPP_AREA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MTS_MTO_FL
     type: string
     nullable: true
     metadata:
@@ -247,13 +296,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _pk_md5_
     type: string
     nullable: true
@@ -263,13 +305,6 @@ schema:
       tags: []
   - name: _l1_upt_
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
