--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -296,6 +296,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_md5_
     type: string
     nullable: true
@@ -306,6 +313,13 @@ schema:
   - name: _l1_upt_
     type: timestamp
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
