JEKT-1887 🔁 Modified     - Pipeline        - JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD     - Dataset        - MD_MATL_LOC

--- a/src/pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD/pbt_aspects.yml
+++ b/src/pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD/pbt_aspects.yml
@@ -1,6 +1,14 @@
 version: 1
 configurations:
+- DJD
+- MTR
+- JET
+- JES
+- BW2
+- SJD
 - default
-- DEU
+- GMD
+- JSW
 - JEM
+- DEU
 dependencies: []
